# Ymirge

./: .gitignore  CMakeLists.txt  CMakeLists.txt.reference  LOGO_PROMPT.md  README.md  build.bat  build.sh  build.zig  rebuild.bat  rebuild.sh
.github/workflows/: release.yml
shaders/: terrain.frag  terrain.fs  terrain.vert  terrain.vs
src/: main_ui_sdl.cpp
src/algorithms/: EdgeSmoothing.cpp  EdgeSmoothing.h  HydraulicErosion.cpp  HydraulicErosion.h  Peaks.cpp  Peaks.h  RiverEnhancements.cpp  RiverEnhancements.h  Rivers.cpp  Rivers.h  TerrainSoftening.cpp  TerrainSoftening.h  ThermalErosion.cpp  ThermalErosion.h  ValleyConnectivity.cpp  ValleyConnectivity.h  ValleyFlattening.cpp  ValleyFlattening.h
src/core/: HeightMap.cpp  HeightMap.h  HeightMapEditCommand.cpp  HeightMapEditCommand.h  PerlinNoise.cpp  PerlinNoise.h  ResolutionManager.cpp  ResolutionManager.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainParams.h  ThreadPool.cpp  ThreadPool.h  UndoCommand.h  UndoStack.cpp  UndoStack.h
src/export/: AdvancedSplatmap.cpp  AdvancedSplatmap.h  ImageExporter.cpp  ImageExporter.h
src/gpu/: ComputeShader.cpp  ComputeShader.h  GPUBuffer.cpp  GPUBuffer.h  GPUCompute.cpp  GPUCompute.h  GPUTest.cpp  GPUTest.h  GaussianBlurGPU.cpp  GaussianBlurGPU.h  PerlinNoiseGPU.cpp  PerlinNoiseGPU.h
src/gpu/shaders/: gaussian_blur.comp  perlin_noise.comp  test.comp
src/layers/: LayerBase.cpp  LayerBase.h  LayerCommand.cpp  LayerCommand.h  LayerCommand_additions.h  LayerGroup.cpp  LayerGroup.h  LayerSerializer.cpp  LayerSerializer.h  LayerStack.cpp  LayerStack.h  LayerStack_old.cpp  LayerStack_old.h  LayerThumbnail.cpp  LayerThumbnail.h  TerrainLayer.cpp  TerrainLayer.h  TerrainLayer_old.cpp  TerrainLayer_old.h
src/rendering/: Camera3D.cpp  Camera3D.h  Shader.cpp  Shader.h  TerrainRendererGL.cpp  TerrainRendererGL.h
src/rendering/shaders/: terrain.frag  terrain.vert
src/tools/: BrushManager.cpp  BrushManager.h  BrushTool.h  FlattenBrush.h  LowerBrush.h  PathTool.cpp  PathTool.h  PolygonSelection.cpp  PolygonSelection.h  RaiseBrush.h  SmoothBrush.h  StampTool.cpp  StampTool.h
src/ui/: PresetManager.cpp  PresetManager.h  UIManagerImGui.cpp  UIManagerImGui.h
